<?xml version="1.0"?>
<package format="2">
  <name>conn_header_test</name>
  <version>0.0.0</version>
  <description>The conn_header_test package</description>

  <maintainer email="william@todo.todo">william</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>


</package>